--- a/styles.css
+++ b/styles.css
@@ -1,69 +1,80 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    line-height: 1.2;
-    font-size: 18px;
-    background-color: #66deb2;
+  line-height: 1.2;
+  font-size: 18px;
+  background-color: #66deb2 !important;
 }
 
-h1, h2 {
-    text-align: center;
-    margin-bottom: 15px;
+h1,
+h2 {
+  text-align: center;
+  margin-bottom: 15px;
 }
 
 .container {
-    width: 100%;
-    margin: 0 auto;
-    max-width: 75%;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 75%;
 }
 
 .form {
-    background: #fff;
-    padding: 10px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    display: flex;
-    justify-content: center;
+  background: #fff;
+  padding: 10px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  display: flex;
+  justify-content: center;
 }
 
 .form__input {
-    min-height: 25px;
-    padding: 10px;
-    width: 100%;
-    border: 1px solid;
+  min-height: 25px;
+  padding: 10px;
+  width: 100%;
+  border: 1px solid;
 }
 
 .form__btn {
-    background: #0be69d;
-    border: none;
-    cursor: pointer;
-    width: 100px;
+  background: #0be69d;
+  border: none;
+  cursor: pointer;
+  width: 100px;
+}
+.js--todos-wrapper {
+  list-style-type: none;
+  padding-left: 0px;
 }
 
 .todo-item {
-    display: flex;
-    padding: 10px;
-    background: #fff;
-    border-radius: 10px;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
+  display: flex;
+  padding: 10px;
+  background: #fff;
+  border-radius: 10px;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  list-style-type: none;
 }
 .todo-item--checked {
-    text-decoration: line-through;
+  text-decoration: line-through;
 }
 .todo-item__description {
-    flex-grow: 1;
-    padding-left: 10px;
+  flex-grow: 1;
+  padding-left: 10px;
 }
 .todo-item__delete {
-    background: #0be69d;
-    border: none;
-    cursor: pointer;
-    width: 95px;
-    padding: 10px;
+  background: #0be69d;
+  border: none;
+  cursor: pointer;
+  width: 95px;
+  padding: 10px;
+}
+
+.modal {
+  position: absolute;
+  background: #66deb2;
 }
